Panfrost: wrong textures and lighting in "Thief" games in wine (not happening when using Software render)
Hi! Both "Thief: the dark project" and "Thief 2 : the metal age" (and I suppose also Thief Gold) launched through wine show wrong textures and lighting. Textures and 3d environment are extremely bright and there is also a weird overlapping of the same textures as if large versions of them are placed above the normally tiled ones. These errors don't happen when the games are launched using a software renderer, with the command LIBGL_ALWAYS_SOFTWARE=1. I'm using wine 7.4 on Armbian Jammy 22.04 on an Odroid N2 sbc (Mali-G52 GPU). Attached to this post you can find a .trace file of Thief: the dark project and the output of glxinfo. Thanks for your help!